<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_16dp">

        <TextView
            android:id="@+id/tv_greatings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/greetings"
            android:textColor="@color/lightBlue"
            android:textSize="@dimen/_15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_city_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city_name"
            android:textColor="@color/lightBlue"
            android:textSize="@dimen/_23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_greatings" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_degree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@drawable/bg_day"
            android:padding="@dimen/_15dp"
            app:layout_constraintTop_toBottomOf="@id/tv_city_code">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_tempereture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15dp"
                android:background="@drawable/bg_degree"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_weather"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_cloud"
                    android:tint="@color/lightBlue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/clear_sky"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20sp"
                    app:layout_constraintTop_toBottomOf="@id/iv_weather" />


                <TextView
                    android:id="@+id/tv_degree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5dp"
                    android:gravity="center"
                    android:text="@string/degree"
                    android:textColor="@color/lightBlue"
                    android:textSize="@dimen/_80sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_weather" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/tv_degree">

                    <TextView
                        android:id="@+id/tv_min_temp"
                        android:layout_margin="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/min_temp"
                        android:textColor="@color/lightBlue"
                        android:textSize="@dimen/_10sp"/>

                    <TextView
                        android:id="@+id/tv_max_temp"
                        android:layout_margin="@dimen/_5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/max_temp"
                        android:textColor="@color/lightBlue" />
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_degree">

            <LinearLayout
                android:id="@+id/view_details_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/view_sunrise"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_details"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/_8dp">

                    <ImageView
                        android:id="@+id/iv_sunrise"
                        android:layout_width="@dimen/_25dp"
                        android:layout_height="@dimen/_25dp"
                        android:src="@drawable/sunrise"
                        android:tint="@color/lightBlue" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunrise"
                        android:textColor="@color/lightBlue"
                        android:textSize="@dimen/_12sp" />

                    <TextView
                        android:id="@+id/tv_sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clock"
                        android:textColor="@color/lightBlue"
                        android:textSize="@dimen/_14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/view_sunset"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_details"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/_8dp">

                    <ImageView
                        android:id="@+id/iv_sunset"
                        android:layout_width="@dimen/_25dp"
                        android:layout_height="@dimen/_25dp"
                        android:src="@drawable/sunrise"
                        android:tint="@color/lightBlue" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunrise"
                        android:textColor="@color/lightBlue"
                        android:textSize="@dimen/_12sp" />

                    <TextView
                        android:id="@+id/tv_sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clock"
                        android:textColor="@color/lightBlue"
                        android:textSize="@dimen/_14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/view_wind"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_details"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/_8dp">


                    <ImageView
                        android:id="@+id/iv_wind"
                        android:layout_width="@dimen/_25dp"
                        android:layout_height="@dimen/_25dp"
                        android:src="@drawable/sunrise"
                        android:tint="@color/lightBlue" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind"
                        android:textColor="@color/lightBlue"
                        android:textSize="@dimen/_12sp" />

                    <TextView
                        android:id="@+id/tv_wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clock"
                        android:textColor="@color/lightBlue"
                        android:textSize="@dimen/_14sp" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_details_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_details_one">

                <LinearLayout
                    android:id="@+id/view_pressure"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_details"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/_8dp">

                    <ImageView
                        android:id="@+id/iv_pressure"
                        android:layout_width="@dimen/_25dp"
                        android:layout_height="@dimen/_25dp"
                        android:src="@drawable/pressure"
                        android:tint="@color/white" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sp" />

                    <TextView
                        android:id="@+id/tv_pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clock"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/view_humidity"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_details"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/_8dp">

                    <ImageView
                        android:id="@+id/iv_humidity"
                        android:layout_width="@dimen/_25dp"
                        android:layout_height="@dimen/_25dp"
                        android:src="@drawable/humidity"
                        android:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sp" />

                    <TextView
                        android:id="@+id/tv_humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clock"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/view_visibility"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_details"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/_8dp">


                    <ImageView
                        android:id="@+id/iv_visibility"
                        android:layout_width="@dimen/_25dp"
                        android:layout_height="@dimen/_25dp"
                        android:src="@drawable/info"
                        android:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/visibility"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sp" />

                    <TextView
                        android:id="@+id/tv_visibility"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clock"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sp" />
                </LinearLayout>


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_daily_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/daily_weather"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/view_details" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_daily_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@drawable/bg_day"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_daily_weather" />





    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>

